# chatbot_evaluation

./: .gitignore  README.md  config_eval.yaml  evaluate.py  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: pytest_workflow.yaml
chatbot_evaluation/: chatbot.py  core.py  dataset.py  evaluation.py  persistence.py  scoring.py
data/: README.md  chat_history_dummy.csv  check_data.py  convert_data.py  create_history_dummy_dataset.py  qa_pairs_dummy.csv
notebooks/: README.md  result_evaluation.ipynb  scoring_tests.ipynb
results/: README.md
tests/: config_test.yaml  conftest.py  test_evaluation.py
utils/: README.md
